--- a/common/package.json
+++ b/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@100xdevs/common",
+  "name": "prasadponnada-common",
   "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
@@ -9,7 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "typescript": "^5.2.2"
+  },
   "dependencies": {
-    "zod": "^3.21.4"
+    "zod": "^3.22.4"
   }
 }
