--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,10 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
-    "zod": "^3.21.4"
+    "prasadponnada-common": "^1.0.2",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
   }
 }
