--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@100xdevs/common": "^1.0.2",
+    "@prisma/client": "^5.7.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
@@ -23,6 +24,9 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5.2.2"
+    "@types/node": "^20.10.5",
+    "prisma": "^5.7.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
